test cases added inmemory repository